Fix homepage title width/wrapping on mobile.

--- a/index.css
+++ b/index.css
@@ -1,5 +1,13 @@
-#page-header h1 {
-    font-size: 4em;
+@media (min-width: 30em) {
+    #page-header h1 {
+        font-size: 4em;
+    }
+}
+
+@media (min-width: 34em) {
+    #page-header h1 .prefer-nowrap {
+        white-space: nowrap;
+    }
 }
 
 #page-header .description {
